# h3mtxt

./: .gitignore  .gitmodules  BitSet.h  CMakeLists.txt  GlobalEvent.h  H3MFwd.h  HeroSettings.h  HeroType.h  LICENSE  LossCondition.h  Map.h  MapAdditionalInfo.h  MapBasicInfo.h  PlayerSpecs.h  README.md  ThirdPartyNotices.txt  Tile.h  VictoryCondition.h  h3mparser.cpp  h3mparser.sln  h3mparser.vcxproj  h3mparser.vcxproj.filters  h3mtxt.cpp  h3mtxt.sln  h3mtxt.vcxproj  h3mtxt.vcxproj.filters  no_objects_or_events.h3m  parseh3m.cpp  parseh3m.h  schema.json  writeText.cpp  writeText.h  writeh3m.cpp
Campaign/: CMakeLists.txt  Campaign.h  Campaign.vcxproj  Campaign.vcxproj.filters  CampaignFwd.h  CampaignHeader.h  CampaignScenario.h  StartingBonus.h  StartingOptions.h
H3JsonReader/: CMakeLists.txt  H3JsonReader.h  H3JsonReader.vcxproj  H3JsonReader.vcxproj.filters  Utils.cpp  Utils.h  VariantJsonReader.h  readArtifactsBitmask.cpp  readCampaign.cpp  readCoordinates.cpp  readCreatureStack.cpp  readGlobalEvent.cpp  readH3Json.cpp  readH3Json.h  readH3cJson.cpp  readH3cJson.h  readH3mJson.cpp  readHeroArtifacts.cpp  readHeroSettings.cpp  readLossCondition.cpp  readMap.cpp  readMapAdditionalInfo.cpp  readMapBasicInfo.cpp  readObjectAttributes.cpp  readObjectDetails.cpp  readObjectDetailsData.cpp  readObjectProperties.cpp  readObjectTemplate.cpp  readPlayerSpecs.cpp  readPlayersBitmask.cpp  readPrimarySkills.cpp  readQuest.cpp  readResources.cpp  readReward.cpp  readSecondarySkill.cpp  readSecondarySkillsBitmask.cpp  readSpellsBitmask.cpp  readStartingBonus.cpp  readStartingOptions.cpp  readTerrainsBitmask.cpp  (+5 more)
H3JsonWriter/: API.h  CMakeLists.txt  CommentBuilder.h  H3JsonWriter.h  H3JsonWriter.vcxproj  H3JsonWriter.vcxproj.filters  LocalizedStringId.h  LocalizedStringsData.cpp  LocalizedStringsData.h  LocalizedStringsProvider.cpp  LocalizedStringsProvider.h  LocalizedStringsReader.cpp  LocalizedStringsReader.h  README.md  Utils.cpp  Utils.h  getEnumString.cpp  getEnumString.h  getSecondarySkillLevelString.cpp  writeArtifactsBitmask.cpp  writeArtifactsBitmask.h  writeCampaign.cpp  writeCampaign.h  writeCoordinates.cpp  writeCreatureStack.cpp  writeCreatureStack.h  writeGlobalEvent.cpp  writeGlobalEvent.h  writeH3cJson.cpp  writeH3cJson.h  writeH3mJson.cpp  writeHeroArtifacts.cpp  writeHeroArtifacts.h  writeLossCondition.cpp  writeLossCondition.h  writeMap.cpp  writeMap.h  writeMapAdditionalInfo.cpp  writeMapAdditionalInfo.h  writeMapBasicInfo.cpp  (+42 more)
H3Reader/: CMakeLists.txt  H3Reader.h  H3Reader.vcxproj  H3Reader.vcxproj.filters  IntegerWidth.h  Utils.cpp  Utils.h  parseh3.cpp  parseh3.h  parseh3c.cpp  parseh3c.h  parseh3m.cpp  parseh3m.h  readCampaign.cpp  readCampaignHeader.cpp  readCampaignScenario.cpp  readCoordinates.cpp  readCreatureStack.cpp  readHeroArtifacts.cpp  readMap.cpp  readObject.cpp  readObjectDetails.cpp  readPrimarySkills.cpp  readQuest.cpp  readResources.cpp  readReward.cpp  readSecondarySkill.cpp  readSecondarySkillsVector.cpp  readSecondarySkillsVector.h  readStartingBonus.cpp  readStartingOptions.cpp  readTimedEvent.cpp  readTimedEventBase.cpp  readVictoryCondition.cpp
H3SvgJsonWriter/: CMakeLists.txt  H3SvgJsonWriter.h  getEnumString.cpp  getEnumString.h  writeEnumIndexedArray.h  writeH3SvgJson.cpp  writeH3SvgJson.h  writeHero.cpp  writeHeroSvg.cpp  writeObjectPropertiesTables.cpp  writeQuest.cpp  writeQuestSvg.cpp  writeReward.cpp  writeRewardSvg.cpp  writeSavedGame.cpp
H3SvgReader/: CMakeLists.txt  H3ReaderBase.cpp  H3ReaderBase.h  H3SvgReader.h  Utils.cpp  Utils.h  parseh3svg.cpp  parseh3svg.h  readEventBase.cpp  readEventBaseSvg.cpp  readHero.cpp  readHeroSvg.cpp  readMapBasicInfo.cpp  readObject.cpp  readObjectPropertiesTables.cpp  readObjectSvg.cpp  readObjectTemplate.cpp  readObjectTemplateSvg.cpp  readPlayerSpecs.cpp  readPlayerSpecsSvg.cpp  readQuest.cpp  readQuestSvg.cpp  readReward.cpp  readRewardSvg.cpp  readSavedGame.cpp  readTile.cpp  readTileSvg.cpp
H3Writer/: CMakeLists.txt  H3Writer.h  H3Writer.vcxproj  H3Writer.vcxproj.filters  Utils.cpp  Utils.h  writeCampaign.cpp  writeCampaignScenario.cpp  writeCoordinates.cpp  writeCreatureStack.cpp  writeGlobalEvent.cpp  writeHeroArtifacts.cpp  writeHeroSettings.cpp  writeLossCondition.cpp  writeMap.cpp  writeMapAdditionalInfo.cpp  writeMapBasicInfo.cpp  writeObject.cpp  writeObjectAttributes.cpp  writeObjectDetails.cpp  writeObjectTemplate.cpp  writePlayerSpecs.cpp  writePrimarySkills.cpp  writeQuest.cpp  writeResources.cpp  writeReward.cpp  writeSecondarySkill.cpp  writeStartingBonus.cpp  writeStartingOptions.cpp  writeTile.cpp  writeTimedEvent.cpp  writeTimedEventBase.cpp  writeVictoryCondition.cpp  writeh3c.cpp  writeh3c.h  writeh3m.cpp  writeh3m.h
JsonCommon/: CMakeLists.txt  FieldName.h  FieldNamesH3C.h  FieldNamesH3M.h  FieldNamesH3SVG.h  FieldNamesSvg.h  JsonCommon.vcxproj  JsonCommon.vcxproj.filters  JsonCommonFwd.h
Map/: AffectedPlayers.h  Base.h  CMakeLists.txt  Campaign.h  CreatureStack.h  GlobalEvent.h  HeroArtifacts.h  HeroSettings.h  LossCondition.h  Map.h  Map.vcxproj  Map.vcxproj.filters  MapAdditionalInfo.h  MapBasicInfo.h  MapFwd.h  Object.h  ObjectAttributes.h  ObjectDetails.h  ObjectDetailsData.h  ObjectDetailsDataVariant.h  ObjectDetailsVariant.h  ObjectProperties.h  ObjectPropertiesVariant.h  ObjectTemplate.h  PlayerSpecs.h  PlayersBitmask.h  PrimarySkills.h  Quest.h  README.md  ReservedData.h  Resources.h  ResourcesBitmask.h  ResourcesDiff.h  Reward.h  SecondarySkill.h  SecondarySkillsBitmask.h  SpellsBitmask.h  Tile.h  TimedEvent.h  TimedEventBase.h  (+2 more)
Medea/: API.h  ArrayElementsWriter.h  CMakeLists.txt  Core.h  FieldsWriter.h  IJsonSerializer.h  JsonWriter.h  JsonWriterImpl.cpp  JsonWriterImpl.h  Medea.h  Medea.vcxproj  Medea.vcxproj.filters  MedeaFwd.h  MinifiedJsonWriter.cpp  MinifiedJsonWriter.h  README.md
SavedGame/: Alignments.h  CMakeLists.txt  Coordinates.h  EnumBoolmask.h  EnumIndexedArray.h  EventBase.h  EventBaseSvg.h  Hero.h  HeroSvg.h  ObjectProperties.h  ObjectPropertiesSvg.h  ObjectPropertiesTables.h  ObjectSvg.h  ObjectTemplateSvg.h  Player.h  PlayerSpecs.h  (+12 more)
(+828 files in other folders)
